Try to fix the issue where the dropdown doesn't appear on mobile

--- a/css/amharic_typer.css
+++ b/css/amharic_typer.css
@@ -38,3 +38,8 @@
     background: beige;
     color: brown;
 }
+
+.dropdown-backdrop {
+    z-index: 0;
+    position: static;
+}
